<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grid Demo</string>
    <string name="demo_cities">Demo: Cities</string>
    <string name="demo_mountains">Demo: Mountains</string>
    <string name="demo_database">Demo: Database</string>
    <string name="demo_sqleditor">Demo: SQL editor</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="pageNumOfNum">%1$d / %2$d</string>

    <string name="col_city">City</string>
    <string name="col_country">Country</string>
    <string name="col_population">Population</string>
    <string name="col_area">Area</string>
    <string name="col_mountain">Mountain</string>
    <string name="col_height">Height</string>
    <string name="col_lat">Latitude</string>
    <string name="col_lon">Longitude</string>
    <string name="col_first">First</string>

    <string name="hint_cell_short">Row %1$d, Column %2$d – City %3$s</string>
    <string name="hint_cell_long">Long tap: %1$s, %2$s</string>
    <string name="config_columns">Hide/unhide, sort columns</string>
    <string name="search">Search</string>
    <string name="hint_sorted_by">Sorted by %1$s</string>
    <string name="hint_sort_reset">Sorting reset</string>
    <string name="hint_title_long">Long tap on title: Column %1$d</string>
    <string name="hint_boundary">Boundary of fixed columns: %1$d %%</string>

    <!-- database demo -->
    <string name="select_table">Select table</string>
    <string name="close">Close</string>
    <string name="no_tables">No tables in this database</string>
    <string name="hint_table_selected">Table %1$s</string>
    <string name="hint_cell_saved">%1$s saved</string>
    <string name="hint_cell_not_saved">%1$s could not be saved</string>
    <string name="delete_row">Delete row</string>
    <string name="delete_row_question">Delete row #%1$d (%2$s) for good?</string>
    <string name="delete">Delete</string>
    <string name="hint_row_deleted">Row deleted: %1$s</string>
    <string name="hint_row_not_deleted">Row %1$s could not be deleted</string>

    <!-- override operator strings (for available strings see grid/strings.xml) -->
    <!--
    <string name="grid_operator_equals">equals</string>
    <string name="grid_operator_not_equals">not equals</string>
    <string name="grid_operator_less">less than</string>
    <string name="grid_operator_less_or_equal">less than or equals</string>
    <string name="grid_operator_greater">greater than</string>
    <string name="grid_operator_greater_or_equal">greather than or equals</string>
    -->

    <!-- sql editor demo -->
    <string name="sql_editor">Click an SQL statement together</string>
    <string name="hint_statement">%1$s: %2$d rows</string>
    <string name="hint_statement_failed">Statement refused</string>
    <string name="load_snippet">Stored statements</string>
    <string name="hint_snippet_saved">Statement stored</string>
    <string name="hint_no_snippets">No statement stored yet</string>
</resources>
