<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <!-- grid container, grid will overwrite icon & menu -->
    <FrameLayout
        android:id="@+id/grid_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_gravity="center_vertical"
            tools:ignore="UselessParent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/demo_cities"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/demo_cities" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/demo_mountains"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/demo_mountains" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/demo_database"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/demo_database" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/control_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prevPage"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_selectTable"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_table"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:minWidth="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:visibility="gone"
            app:icon="@drawable/grid_ic_table"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_configColumns"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/config_columns"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:minWidth="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:icon="@drawable/grid_ic_reorder"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:minWidth="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:icon="@drawable/grid_ic_search"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <TextView
            android:id="@+id/pageNumOfNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextPage"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>
